Add image to CB recipe

--- a/recipes/cheese-bread.html
+++ b/recipes/cheese-bread.html
@@ -6,6 +6,7 @@
     <title>Cheese Bread Recipe</title>
 </head>
 <body>
-    
+    <h1>Brazilian Cheese Bread</h1>
+    <img src="../images/cheesebread.jpg" width="360" height="310" alt="Cheese Bread when done"> 
 </body>
 </html>
