Add description for CB recipe

--- a/recipes/cheese-bread.html
+++ b/recipes/cheese-bread.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Brazilian Cheese Bread</h1>
-    <img src="../images/cheesebread.jpg" width="360" height="310" alt="Cheese Bread when done"> 
+    <img src="../images/cheesebread.jpg" width="360" height="310" alt="Cheese Bread when done">
+    <h2>What is Cheese Bread?</h2>
+    <p>Cheese Bread is a beloved brazilian snack, it has a crunchy outside that hides a delicious, soft and chewy cheesy inside!</p>
 </body>
 </html>
