--- a/recipes/cheese-bread.html
+++ b/recipes/cheese-bread.html
@@ -10,7 +10,7 @@
     <img src="../images/cheesebread.jpg" width="360" height="310" alt="Cheese Bread when done">
     <h2>What is Cheese Bread?</h2>
     <p>Cheese Bread is a beloved brazilian snack, it has a crunchy outside that hides a delicious, soft and chewy cheesy inside!</p>
-    <h2>Ingredients</h2>
+    <h2>Ingredients!</h2>
     <ul>
         <li>½ cup olive oil or butter</li>
         <li>⅓ cup water</li>
@@ -21,5 +21,15 @@
         <li>⅔ cup freshly grated Parmesan cheese</li>
         <li>2 beaten eggs</li>
     </ul>
+    <h2>Steps for the making!</h2>
+    <ol>
+        <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li>Combine olive oil, water, milk, and salt in a large saucepan and place over high heat. Bring to a boil and immediately remove from the heat.</li>
+        <li>Stir in tapioca flour and garlic, stirring until smooth. Set aside to rest for 10 to 15 minutes.</li>
+        <li>Stir cheese and eggs into tapioca mixture until combined; the dough will be chunky, like cottage cheese.</li>
+        <li>Drop dough by 1/4 cup-size balls onto an ungreased baking sheet.</li>
+        <li>Bake in the preheated oven until the tops are lightly browned, 15 to 20 minutes.</li>
+    </ol>
+    <p><strong>Congrats, you're done!</strong></p>
 </body>
 </html>
