Add links for the recipes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/cheese-bread.html">Cheese Bread</a>
+    <ul>
+        <li><a href="recipes/cheese-bread.html">Cheese Bread</a></li>
+        <li><a href="recipes/condensed-milk-cake.html">Condensed Milk Cake</a></li>
+        <li><a href="recipes/brigadeiro.html">Brigadeiro</a></li>
+    </ul>
 </body>
 </html>
